# pytorch-cpp

./: .gitignore  LICENSE  README.md
libtorch/: CMakeLists.txt  predict.cpp
pytorch/: predict.py  test.py  to_torch_script.py  train.py  utils.py  vgg.py
